Refactoring in PlaceService.  Creating converters.  Name attribute for Place.